# seeker

./: .gitignore  CLAUDE.md  Cargo.toml  PLAN-levels-4-5-6.md  README.md
.github/workflows/: check.yaml  search.yaml
benches/: main.rs
data/: config.ron  critical-rule3-snap.ron  critical-rule7-deep-snap.ron  critical-rule7-snap.ron  critical-survey-1000.txt  deep-config.ron  default-snap.ron  emergence-config.ron  emergence-snap.ron  gol-deep-snap.ron  gol-deep.ron  gol-fast-snap.ron  gol-fast.ron  gol-hunt-snap.ron  gol-hunt-wrap-snap.ron  gol-hunt.ron  gol-snap.ron  gol-turbo-snap.ron  gol-turbo.ron  gol-volume-snap.ron  gol-volume.ron  hunt-big-snap.ron  hunt-big.ron  hunt-gpu.ron  hunt-rules.ron  hunt-wrap-big-snap.ron  rules.ron
data/snaps/: glider.ron  rain.ron
docs/: _config.yml  index.md  mgamma-plan.md
docs/_layouts/: post.html
docs/_posts/: 2022-02-26-starting-point.md  2022-03-05-first-model.md  2022-05-02-cell-automata.md  2022-05-10-cell-history.md  2022-05-21-m-alpha.md  2022-05-21-starting-point.md  2022-05-21-survivability.md  2022-05-22-first-model.md
examples/: critical_search.rs  critical_survey.rs  ecosystem.rs  energy.rs  flow_lenia.rs  measure.rs  metabolism.rs  motility.rs  recycling.rs  search.rs  species.rs  transect.rs
src/: analysis.rs  emergence.rs  flow_lenia.rs  gpu.rs  grid.rs  harness.rs  lab.rs  lib.rs  main.rs  narrative.rs  render.rs  rules.rs  search.rs  sim.rs  tui.rs
src/shaders/: ca_step.wgsl
tests/: calibration.rs  landmarks.rs
