[package]
name = "seeker"
version = "0.1.0"
edition = "2021"
publish = false

[lib]

[[bin]]
name = "seeker"
path = "src/main.rs"

[[bench]]
name = "main"
harness = false

[dependencies]
choir = { git = "https://github.com/kvark/choir" }
crossbeam-channel = "0.5"
crossterm = "0.23"
log = "0.4"
rand = "0.8"
ron = "0.7"
rustc-hash = "1"
serde = { version = "1", features = ["serde_derive"]}
tui = "0.18"

[dev-dependencies]
criterion = "0.3"
